--- a/P1/PRACTICAS/practica1/index.html
+++ b/P1/PRACTICAS/practica1/index.html
@@ -46,8 +46,8 @@
             <div class="sidebar-block">
                 <h3>Contacto</h3>
                 <ul class="contact-list">
-                    <li>[464 137 9798]</li> <!-- TODO: Reemplazar -->
-                    <li>[atstrujillo02@gmial.com]</li>    <!-- TODO: Reemplazar -->
+                    <li>[765 137 9978]</li> <!-- TODO: Reemplazar -->
+                    <li>[ats02@gmial.com]</li>    <!-- TODO: Reemplazar -->
                     <li>[iasolution.com.mx]</li>      <!-- TODO: Reemplazar -->
                 </ul>
             </div>
