--- a/P6/asesorias.html
+++ b/P6/asesorias.html
@@ -2,20 +2,20 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica 6</title>
+    <meta name="viewport" content="width=de vice-width, initial-scale=1.0">
+    <title>Asesorias</title>
     <link rel="stylesheet" href="ccs/acho.css">
 </head>
 <body>
     <header>
-        <h1>TITULO</h1>
+        <h1>Asesorias</h1>
         <h2>Subtitulo</h2>
         <P>SUBSCRIPCIÓN</P>
     </header>
     <nav>
         <ul>
             <li>
-            <a href="inicio.html">INICIO</a>
+            <a href="index.html">INICIO</a>
             </li>
             <li>
              <a href="servicios.html">SERVICIOS</a>
@@ -51,5 +51,15 @@
             <td>Twitter</td>
         </tr>
     </table>
+</html>
+</head>
+<body>
+   
+</body>
+</html>
+ 
+   
+   
+</body>
 </html>
  
